# QSharpUtilities

./: .gitignore  pyproject.toml  qsharp.json  readme.md
QSharpMathUtils/: qsharp.json
QSharpMathUtils/src/: Complex.qs  Doubles.qs  Functions.qs  HigherOrderFunctions.qs  Main.qs  Matrices.qs  Utilities.qs  Vectors.qs
QSharpMathUtils/src/Categories/: Group.qs  Monoid.qs
QSharpMathUtils/src/Matrices/: Conjugate.qs  Constructors.qs  Examples.qs  Identity.qs  Instances.qs  Inverse.qs  Invert.qs  Multiply.qs  Properties.qs
QSharpMathUtils/src/Matrices/Complex/: AdjointM.qs  Comparison.qs  Conjugate.qs  Inverse.qs  Multiply.qs  Types.qs  Unitary.qs
QSharpMathUtils/src/TypeClasses/: Field.qs
QSharpMathUtils/src/Utilities/: Matrices.qs
QSharpMathUtils/src/Utilities/Matrices/: Constructors.qs  Identity.qs  Invert.qs  Multiply.qs  Properties.qs
QSharpUtilities/: qsharp.json
QSharpUtilities/src/: Main.qs
QSharpUtilities/src/Utilities/: Complex.qs  Functions.qs  Vectors.qs
QSharpUtilities/src/Utilities/Categories/: Monoid.qs
QSharpUtilities/src/Utilities/Matrices/: Constructors.qs  Identity.qs  (+3 more)
src/: Complex.qs  Functions.qs  Main.qs  Matrices.qs  Vector.qs
src/Matrices/: Conjugate.qs  Examples.qs  Inverse.qs  Multiply.qs
src/Utilities/: Main.qs  Matrices.qs
src/Utilities/Matrices/: Conjugate.qs  Multiply.qs
tests/utilities/: test_complex.py  test_higher_order_functions.py  test_vectors.py
tests/utilities/categories/: test_monoid.py
tests/utilities/matrices/: test_identity.py  test_invert.py  test_multiply.py  test_properties.py  test_unitary.py
(+1 files in other folders)
