# pyproject.toml

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qsharp-utilities"
requires-python = ">=3.11"
dependencies = [
    "qsharp >= 1.12",
    "pytest >= 7.4.0",
    "numpy >= 2.2"
]
version = "0.1.0"
authors = [
    {name = "Robert Crellin"}
]
keywords = ["QSharp", "Q#", "Quantum"]

[project.optional-dependencies]
dev = [
    "qsharp >= 1.12",
    "pytest >= 7.4.0",
    "mypy >= 1.8",
    "numpy >= 2.2"
]

[tool.setuptools]
packages = []
py-modules = []

[tool.mypy]
ignore_missing_imports = true
exclude = ['out', 'build']